2014-07-03  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/ia64/nptl/bits/pthreadtypes.h: Moved ...
	* sysdeps/ia64/nptl/bits/pthreadtypes.h: ... here.
	* sysdeps/unix/sysv/linux/ia64/nptl/bits/semaphore.h: Moved ...
	* sysdeps/ia64/nptl/bits/semaphore.h: ... here.
	* sysdeps/unix/sysv/linux/ia64/nptl/bits/local_lim.h: Moved ...
	* sysdeps/unix/sysv/linux/ia64/bits/local_lim.h: ... here.

2014-07-03  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/pthread/createthread.c: Include <arch-fork.h>.
	* sysdeps/unix/sysv/linux/ia64/arch-fork.h (ARCH_CLONE): New macro.
	* sysdeps/ia64/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/ia64/nptl/createthread.c: File removed.

2014-07-03  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/ia64/clone2.S: Deconditionalize the code
	that was previously under [RESET_PID].
	* sysdeps/unix/sysv/linux/ia64/nptl/clone2.S: File removed.

2014-07-07  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nptl/lowlevellock.h: File removed.

	* NEWS: NPTL is no longer an add-on!
	* nptl/internaltypes.h: Moved ...
	* sysdeps/nptl/internaltypes.h: ... here.
	* sysdeps/nptl/aio_misc.h: Use <nptl/pthreadP.h> in #include.
	* sysdeps/nptl/fork.c: Likewise.
	* sysdeps/nptl/gai_misc.h: Likewise.
	* sysdeps/nptl/librt-cancellation.c: Likewise.
	* sysdeps/nptl/jmp-unwind.c: Likewise.
	* sysdeps/nptl/setxid.h: Likewise.
	* sysdeps/unix/sysv/linux/aarch64/Implies: New file.
	* sysdeps/unix/sysv/linux/alpha/Implies: Add alpha/nptl.
	* sysdeps/unix/sysv/linux/arm/Implies: New file.
	* sysdeps/unix/sysv/linux/hppa/Implies: New file.
	* sysdeps/unix/sysv/linux/i386/Implies: Add i386/nptl.
	* sysdeps/unix/sysv/linux/i386/i686/Implies: New file.
	* sysdeps/unix/sysv/linux/ia64/Implies: Add ia64/nptl.
	* sysdeps/unix/sysv/linux/m68k/Implies: New file.
	* sysdeps/unix/sysv/linux/microblaze/Implies: New file.
	* sysdeps/unix/sysv/linux/mips/Implies: New file.